add endpoint for returns connector's source types
