# backend/api/docs/swagger.yaml
@@ -299,6 +299,7 @@ definitions:
     - zendesk
     - loopio
     - sharepoint
+    - msteams
     type: string
     x-enum-varnames:
     - SourceTypeIngestionApi
@@ -326,6 +327,16 @@ definitions:
     - SourceTypeZendesk
     - SourceTypeLoopio
     - SourceTypeSharepoint
+    - SourceTypeMsTeams
+  model.SourceTypeDescription:
+    properties:
+      id:
+        $ref: '#/definitions/model.SourceType'
+      isImplemented:
+        type: boolean
+      name:
+        type: string
+    type: object
   model.Tenant:
     properties:
       configuration:
@@ -775,6 +786,24 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: updates connector
+      tags:
+      - Connectors
+  /manage/connector/source_types:
+    get:
+      description: return list of source types
+      operationId: connectors_get_source_types
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.SourceTypeDescription'
+            type: array
+      security:
+      - ApiKeyAuth: []
+      summary: return list of source types
       tags:
       - Connectors
   /manage/credential:
